nrimate-app/ingress.yaml
# ingress-nrimate.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nrimate-ingress
  namespace: nrimate
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-nrimate"
spec:
  tls:
  - hosts:
    - nrimate.com
    - www.nrimate.com
    secretName: nrimate-tls
  rules:
  - host: nrimate.com
    http:
      paths:
      - backend:
          service:
            name: backend-svc
            port:
              number: 8080
        path: /api-docs
        pathType: Prefix
      - backend:
          service:
            name: backend-svc
            port:
              number: 8080
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: frontend-svc
            port:
              number: 80
        path: /
        pathType: Prefix
