nrimate-app/nrimate-app.yaml

# deployment-nrimate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nrimate-deployment
  namespace: nrimate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nrimate
  template:
    metadata:
      labels:
        app: nrimate
    spec:
      containers:
      - name: nrimate-container
        image: mmodi/nrimate-app:latest
        ports:
        - containerPort: 80

---

# service-nrimate.yaml
apiVersion: v1
kind: Service
metadata:
  name: nrimate-service
  namespace: nrimate
spec:
  selector:
    app: nrimate
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---

# ingress-nrimate.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nrimate-ingress
  namespace: nrimate
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-nrimate"
spec:
  tls:
  - hosts:
    - nrimate.com
    - www.nrimate.com   # Include www subdomain here
    secretName: nrimate-tls
  rules:
  - host: nrimate.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nrimate-service
            port:
              number: 80
  - host: www.nrimate.com   # Add a rule for www subdomain
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nrimate-service
            port:
              number: 80
